--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -18,14 +18,15 @@ jobs:
         BUILD_DATE: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
         VCS_URL: $(git config --get remote.origin.url)
         VCS_REF: $(git rev-parse --short HEAD)
+        GCC_VERSION: 9.2.0
         OMPI_VERSION: 4.0.0
       with:
         name: leavesask/gompi
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        buildargs: OMPI_VERSION,BUILD_DATE,VCS_URL,VCS_REF
+        buildargs: GCC_VERSION,OMPI_VERSION,BUILD_DATE,VCS_URL,VCS_REF
         buildoptions: "--compress"
-        tags: "latest,4.0.0"
+        tags: "latest,4.0.0,4.0.0-gcc-9.2.0"
 
   build_3_1_5:
     runs-on: ubuntu-latest
@@ -39,11 +40,12 @@ jobs:
         BUILD_DATE: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
         VCS_URL: $(git config --get remote.origin.url)
         VCS_REF: $(git rev-parse --short HEAD)
+        GCC_VERSION: 9.2.0
         OMPI_VERSION: 3.1.5
       with:
         name: leavesask/gompi
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        buildargs: OMPI_VERSION,BUILD_DATE,VCS_URL,VCS_REF
+        buildargs: GCC_VERSION,OMPI_VERSION,BUILD_DATE,VCS_URL,VCS_REF
         buildoptions: "--compress"
-        tags: "3.1.5"
+        tags: "3.1.5,3.1.5-gcc-9.2.0"
